force-app/main/default/objects/Broker_Assignment__c/Broker_Assignment__c.object-meta.xml
<CustomObject>
    <description>One broker-to-property listing assignment. Records are never deleted; closing a listing changes Status.</description>
    <label>Broker Assignment</label>
    <pluralLabel>Broker Assignments</pluralLabel>
    <nameField>
        <displayFormat>BA-{0000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>