force-app/main/default/objects/Broker_Assignment__c/fields/Broker_Email__c.field-meta.xml
<CustomField>
    <fullName>Broker_Email__c</fullName>
    <label>Broker Email</label>
    <formula>Broker__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>