force-app/main/default/objects/Broker_Assignment__c/fields/Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Name__c</fullName>
    <label>Broker Name</label>
    <formula>Broker__r.FirstName &amp; " " &amp; Broker__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>