force-app/main/default/objects/Broker_Assignment__c/fields/Broker_Phone__c.field-meta.xml
<CustomField>
    <fullName>Broker_Phone__c</fullName>
    <formula>Broker__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Phone</label>
    <type>Text</type>
</CustomField>