force-app/main/default/objects/Broker_Assignment__c/fields/Days_Since_Check_In__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Check_In__c</fullName>
    <formula>IF(ISBLANK(Last_Check_In_Date__c), null, TODAY() - Last_Check_In_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Check-In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>