force-app/main/default/objects/Broker_Assignment__c/fields/Gross_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Gross_Sq_Ft__c</fullName>
    <formula>Property_Asset__r.Property__r.Square_Footage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Sq Ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>