force-app/main/default/objects/Broker_Assignment__c/fields/Leased_Area__c.field-meta.xml
<CustomField>
    <fullName>Leased_Area__c</fullName>
    <formula>Gross_Sq_Ft__c - Vacant_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leased Area (Sq Ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>