force-app/main/default/objects/Broker_Assignment__c/fields/Listing_Active_Days__c.field-meta.xml
<CustomField>
    <fullName>Listing_Active_Days__c</fullName>
    <label>Listing Active Days</label>
    <formula>IF(ISBLANK(Listing_Start_Date__c), null, IF(ISBLANK(Listing_End_Date__c), TODAY(), Listing_End_Date__c) - Listing_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>