force-app/main/default/objects/Broker_Assignment__c/fields/Listing_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Listing_End_Date__c</fullName>
    <label>Listing End Date</label>
    <type>Date</type>
</CustomField>