force-app/main/default/objects/Broker_Assignment__c/fields/Listing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Listing_Start_Date__c</fullName>
    <label>Listing Start Date</label>
    <type>Date</type>
</CustomField>