force-app/main/default/objects/Broker_Assignment__c/fields/Property_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Display_Name__c</fullName>
    <label>Property Name</label>
    <formula>Property_Asset__r.Property_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>