force-app/main/default/objects/Broker_Assignment__c/fields/Reason_Ended__c.field-meta.xml
<CustomField>
    <fullName>Reason_Ended__c</fullName>
    <label>Reason Ended</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Leased Up</fullName><default>false</default><label>Leased Up</label></value>
            <value><fullName>Performance Issue</fullName><default>false</default><label>Performance Issue</label></value>
            <value><fullName>Company Decision</fullName><default>false</default><label>Company Decision</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>