force-app/main/default/objects/Broker_Assignment__c/fields/Replacement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Notes__c</fullName>
    <label>Replacement Notes</label>
    <description>Free-text notes captured when a broker is replaced, kept on the outgoing broker's closed listing and shown under that broker in history.</description>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>