force-app/main/default/objects/Broker_Assignment__c/fields/Vacant_Area__c.field-meta.xml
<CustomField>
    <fullName>Vacant_Area__c</fullName>
    <label>Vacant Area (Sq Ft)</label>
    <formula>Property_Asset__r.Vacant_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>