force-app/main/default/objects/Broker_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Property_Display_Name__c</columns>
    <columns>Broker_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Last_Check_In_Date__c</columns>
    <columns>Days_Since_Check_In__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>